biocomplexity/templates/rasaActionServer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rasa-action-server-service
  namespace: biocomplexity
spec:
  selector:
    app: rasa-action-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
