biocomplexity/templates/rasaActionServer/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: rasa-action-server-nginx-ingress
  namespace: biocomplexity
spec:
  rules:
    - host: rasa-action-server.pods.uvarc.io
      http:
        paths:
          - backend:
              serviceName: rasa-action-server-service
              servicePort: 8080
            path: /
